--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.51.0",
+    "@tanstack/react-query": "^5.84.2",
     "@types/react-signature-canvas": "^1.0.7",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.525.0",
